src/test/deca/context/valid/public_field_access.deca
/*
    Description : accés à un champ public

    Résultat : OK
*/
class A{
    int x;
}
{
    A u = new A();

    u.x;
}
