src/test/deca/context/invalid/protected_access_outside_subtype.deca
/*
    Description : Accès à un attribut protégé en dehors d'une sous classe

    Résultat : Erreur contextuelle
*/
class B{
    protected int u;
}
class A{
    B p = new B();

    int a = p.u;
}
